<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/forgot_password_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="gotoForgotPassword"
        android:text="@string/forgot_password"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_started_from_login"
        app:layout_constraintVertical_bias="0.043" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/signin_button"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="44dp"
        android:background="@drawable/big_button_shape"
        android:elevation="10sp"
        android:onClick="login"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login_editText"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

    <EditText
        android:id="@+id/email_login_editText"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="136dp"
        android:autofillHints="@string/email_address"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:outlineProvider="none"
        android:paddingHorizontal="10sp"
        android:paddingVertical="10sp"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/get_started_from_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="gotoSignUpPage"
        android:paddingVertical="0sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />

    <EditText
        android:id="@+id/password_login_editText"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:outlineProvider="none"
        android:paddingHorizontal="10sp"
        android:paddingVertical="10sp"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login_editText" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="198dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>