<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".SignUpActivity">


    <EditText
        android:id="@+id/password_signup_editText"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:outlineProvider="none"
        android:paddingHorizontal="10sp"
        android:paddingVertical="10sp"
        android:singleLine="true"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_signup_editText" />

    <EditText
        android:id="@+id/email_signup_editText"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/email_address"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:outlineProvider="none"
        android:paddingHorizontal="10sp"
        android:paddingVertical="10sp"
        android:singleLine="true"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_editText" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="198dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="3dp" />

    <EditText
        android:id="@+id/last_name_editText"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/last_name"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/ic_account_box_black_24dp"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:outlineProvider="none"
        android:paddingStart="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_editText" />

    <EditText
        android:id="@+id/first_name_editText"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="56dp"
        android:autofillHints="@string/First_name"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/ic_account_box_black_24dp"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="fill"
        android:hint="@string/First_name"
        android:inputType="textPersonName"
        android:outlineProvider="none"
        android:paddingStart="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/get_started_button"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="28dp"
        android:alpha="1"
        android:background="@drawable/big_button_shape"
        android:elevation="10sp"
        android:onClick="createAccount"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_signup_editText"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

    <TextView
        android:id="@+id/signin_from_login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="gotoLoginPage"
        android:paddingHorizontal="5sp"
        android:text="@string/already_signup"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_started_button" />

</androidx.constraintlayout.widget.ConstraintLayout>